# spider

./: .env.example  .gitattributes  .gitignore  README.md
.github/workflows/: deploy.yml  diagnose.yml  logs.yml  release.yml  test.yml  verify.yml
client/: Cargo.toml
client/src/: autostart.rs  config.rs  crypto.rs  enroll.rs  executor.rs  main.rs  proto.rs  pty.rs  screen.rs  sysinfo_collector.rs  transport.rs  tray.rs  update.rs
deploy/: Caddyfile  install.sh  jp.js  spider-server.service
docs/: API.md  ARCHITECTURE.md  CLIENT.md  CONTRIBUTING.md  DEPLOY.md  SECURITY.md
panel/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
panel/src/: index.css  main.tsx  test-setup.ts
panel/src/app/: App.tsx  Layout.tsx
panel/src/components/: ScreenView.tsx  Terminal.tsx
panel/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  toggle.tsx
panel/src/hooks/: useEvents.ts
panel/src/lib/: api.ts  utils.test.ts  utils.ts
panel/src/pages/: DeviceDetail.tsx  Devices.tsx  Enrollments.tsx  Login.tsx  Settings.tsx
panel/src/schemas/: index.ts  schemas.test.ts
panel/src/stores/: auth.test.ts  auth.ts  devices.ts  settings.ts
server/: go.mod  go.sum
server/cmd/spider/: main.go
server/internal/api/: admin.go  admin_events.go  admin_stream.go  agent.go  api_test.go  http.go  screenshots.go  screenshots_test.go  session.go
server/internal/commands/: dispatcher.go  dispatcher_test.go  id.go
server/internal/config/: config.go  config_test.go
server/internal/crypto/: crypto.go  crypto_test.go  messages.go
server/internal/hub/: hub.go  hub_test.go  sub_test.go
server/internal/panel/: panel.go
server/internal/store/: audit.go  commands.go  devices.go  enrollments.go  models.go  screenshots.go  store.go  store_test.go
server/internal/store/migrations/: 001_init.sql  002_screenshots.sql
server/internal/version/: version.go
